--- a/Hello_CG/Hello_CG/Hello_CG.vcxproj
+++ b/Hello_CG/Hello_CG/Hello_CG.vcxproj
@@ -75,7 +75,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>.\Includes;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\fangy\source\repos\SUSTech_CS312_Computer_Graphics\Hello_CG\Hello_CG\Libs;$(LibraryPath)</LibraryPath>
+    <LibraryPath>.\Libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\Users\fangy\source\repos\SUSTech_CS312_Computer_Graphics\Hello_CG\Hello_CG\Includes;$(IncludePath)</IncludePath>
