--- a/Hello_CG/Project1/Project1.vcxproj.filters
+++ b/Hello_CG/Project1/Project1.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="glad.c">
+    <ClCompile Include="..\Hello_CG\Rectangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Triangle.cpp">
+    <ClCompile Include="..\Hello_CG\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
