two triangle; rectangle

--- a/Rectangle/Rectangle.vcxproj.filters
+++ b/Rectangle/Rectangle.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Hello_CG\Rectangle.cpp">
+    <ClCompile Include="..\Hello_CG\glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\Hello_CG\glad.c">
+    <ClCompile Include="Rectangle.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
